hammer time fix attempt on ios device2

--- a/src/sass/common/content.scss
+++ b/src/sass/common/content.scss
@@ -75,6 +75,8 @@
         @include applyScrollbar();
         overflow-y: auto;
         overflow-x: hidden;
+
+        touch-action: pan-y;
       }
 
       .ps__rail-y {
